--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>Those who do nonsense works are called idiot.</p>
     <p>Sometimees the word "idiot" is placed after a species.</p>
     <h3>For examples</h3>
-    <p> A camel watching mobile for full 24 hours, it will be "idiot camel🐫/🐪".<br>Similarly, "idi".</p>
+    <p> A camel watching mobile for full 24 hours, it will be "idiot camel🐫/🐪".<br>Similarly, "idiot donkey".</p>
     <p>😂😂😂LOL!😂😂😂<br>😅😎😎😎😎‍</p>
   </body>
 </html>
